# ocr_line_image_classifier

./: .gitignore  README.md  checkpoint.txt  corrupted_file.txt  pyproject.toml
data/line_image_with_issue/images/: I00KG084380015_0.tif  I00KG084380015_2.tif  I00KG084380015_4.tif  I00KG084380370_11.tif  I00KG084380370_14.tif  I00KG084380370_19.tif  I00KG084380370_6.tif  I00KG084380370_7.tif  I00KG084380370_9.tif  I01JW660027_2.tif  I01JW660027_3.tif  I01JW660027_6.tif  I01JW660035_5.tif  I01JW660035_6.tif  I01JW660035_7.tif  I01JW660035_8.tif  I01JW660035_9.tif  I01JW660037_5.tif  I01JW660037_6.tif  I01JW660037_7.tif  I01JW660037_8.tif  I01JW660037_9.tif  I01JW660039_2.tif  I01JW660039_3.tif  I01JW660039_4.tif  I01JW660039_5.tif  I01JW660039_6.tif  I01JW660041_6.tif  I01JW660041_7.tif  I01JW660041_8.tif  I01JW660041_9.tif  I01JW660043_5.tif  I01JW660043_6.tif  I01JW660043_7.tif  I01JW660043_8.tif  I01JW660043_9.tif  I01JW660047_1.tif  I01JW660047_2.tif  I01JW660047_3.tif  I01JW660047_5.tif  (+24138 more)
src/ocr_line_image_classifier/: checkpoint.py  classify_batch_line_image.py  classify_issue.py  create_chart.py  find_text_similarity.py  group_by_similarity.py  metrics.py  update_transcript_sccore.py  utils.py
tests/: test_classify_line_image.py  test_metrics.py  test_update_transcript.py
tests/test_data/expected_transcript/: high_simi_transcript.csv  low_simi_transcript.csv
tests/test_data/stats/: evaluation_metrics_0.9.csv
tests/test_data/transcript/: transcript.csv
tests/test_data/updated_transcript/: transcript.csv  transcript.json
(+8 files in other folders)
